# server/configurations/authenticator.py
@@ -18,10 +18,10 @@ def verify_auth():
     ]
 
     for allowed_url in allowed_urls:
-        if re.fullmatch(allowed_url, connexion.request.path):
+        if re.match(allowed_url, connexion.request.path):
             return
 
-    x_api_key = connexion.request.headers.get("x_api_key")
+    x_api_key = connexion.request.headers.get("x-api-key")
 
     if x_api_key is None:
         raise Unauthorized()
