# server/swagger/swagger.yaml
@@ -66,8 +66,6 @@ paths:
             $ref: "#/definitions/Usuario"
         500:
           description: "Erro no servidor"
-      security:
-        - apiKey: [ ]
       x-swagger-router-controller: "server.controllers.usuario_controller"
   /dominios:
     get:
@@ -96,8 +94,6 @@ paths:
             $ref: "#/definitions/DominioPaginado"
         500:
           description: "Erro que o servidor não soube lidar"
-      security:
-        - apiKey: [ ]
       x-swagger-router-controller: "server.controllers.dominio_controller"
   /autenticacao:
     post:
@@ -146,8 +142,6 @@ paths:
             $ref: "#/definitions/MatchVO"
         500:
           description: "Erro no servidor"
-      security:
-        - apiKey: [ ]
       x-swagger-router-controller: "server.controllers.match_controller"
   /animal:
     post:
@@ -173,14 +167,14 @@ paths:
         500:
           description: "Erro no servidor"
       x-swagger-router-controller: "server.controllers.animal_controller"
-
-securityDefinitions:
-  apiKey:
-    description: "jwt cross-token generated by authentication api"
-    type: "apiKey"
-    name: "x-api-key"
-    in: "header"
-    x-apikeyInfoFunc: "server.configurations.filters.token_info"
+#
+#securityDefinitions:
+#  apiKey:
+#    description: "jwt cross-token generated by authentication api"
+#    type: "apiKey"
+#    name: "x-api-key"
+#    in: "header"
+#    x-apikeyInfoFunc: "server.configurations.filters.token_info"
 definitions:
   Paginado:
     type: object
